--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@material-ui/icons": "^4.2.1",
     "@types/react-router-dom": "^4.3.4",
     "axios": "^0.19.1",
-    "eslint-plugin-react-hooks": "^1.6.1",
     "material-table": "^1.54.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -42,6 +41,7 @@
     "eslint-config-airbnb": "^17.1.1",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.14.2"
+    "eslint-plugin-react": "^7.14.2",
+    "eslint-plugin-react-hooks": "^1.6.1",
   }
 }
